# bevcost

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: documentation.yml  sphinx.yml
bevcost/: TCOmodel.py
docs/: conf.py  index.md
docs/source/: api.rst  background.rst  conf.py  index.rst
docs/source/apiref/: index.rst
examples/: analysis.json  data.json  tco_example.py
examples/Plotting/: tco_spaghetti_line_plots.py  tco_stacked_bar_chart.py
tests/: context.py  test_DigitalSolutionsCell.py  test_FleetCell.py  test_InfraCell.py  test_WorkforceCell.py
