[build-system]
requires = ["setuptools >= 75.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bevcost_edfagan"
version = "0.0.1"
authors = [
  {name="Edward Fagan", email="edward@zero.nexus"},
]
maintainers = [
  {name="Edward Fagan", email="edward@zero.nexus"},
]
description = "Python package for BEV total cost of ownership (TCO) analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies  = [
	"pandas >= 2.0.3",
	"matplotlib >= 3.7.2",
	"numpy >= 1.24.3",
	"numpy_financial >= 1.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "GPL-3.0"
license = {file = "LICENSE.md"}
keywords = ["battery electric vehicles", "BEV", "total cost of ownership", "TCO"]

[project.urls]
Homepage = "https://github.com/6synct-Consulting-Inc/bevcost"
Issues = "https://github.com/6synct-Consulting-Inc/bevcost/issues"
Documentation = "https://bevcost.readthedocs.io/en/latest/"